# erp

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt
backend/: auth.py  db.py  init_db.py  main.py  test_model.py
backend/models/: database.py  product.py
client/: main.py
tests/: setup.py  test_product.py
